--- a/minimaless.css
+++ b/minimaless.css
@@ -47,6 +47,8 @@
 /* member list */
 .container-2o3qEW {
     display: none;}
+.membersWrap-3NUR2t {
+    display: none;}
 
 /* friends */
 .scroller-WSmht3 {
